# goboscript-www

./: README.md  pyproject.toml
src/backend/: __init__.py  routes.py  templates.py
src/goboscript_www/: __init__.py
templates/: base.jinja  user.jinja
